# stubai-snow

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
assets/shaders/test/: hello_triangle.frag  hello_triangle.vert
src/app/: main.cpp
src/core/: Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
src/gfx/: GLContext.cpp  GLContext.hpp  Shader.cpp  Shader.hpp
src/scene/: Camera.cpp  Camera.hpp
